<!--
  ~ Copyright (c) 2019.
  ~ This file is part of Metronome.
  ~
  ~      Metronome is free software: you can redistribute it and/or modify
  ~      it under the terms of the GNU General Public License as published by
  ~      the Free Software Foundation, either version 3 of the License, or
  ~      (at your option) any later version.
  ~
  ~      Metronome is distributed in the hope that it will be useful,
  ~      but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~      GNU General Public License for more details.
  ~
  ~      You should have received a copy of the GNU General Public License
  ~      along with Metronome.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="MissingTranslation">
	<string name="app_name">Metronome</string>
	<string name="start">Start/Stop</string>
	<string name="bpm">BPM:</string>
	<string name="plus_one">+1</string>
	<string name="minus_one">-1</string>
	<string name="plus_ten">+10</string>
	<string name="minus_ten">-10</string>
	<string name="beats_number">Beats:</string>
	<string name="keep_on">Keep The Screen On</string>
	<string name="save">Save</string>
	<string name="restore">Restore</string>
	<string name="about">About</string>
	<string name="email">waelkarram@gmail.com</string>
	<string name="copyright">Copyright 2019, Wael Karram.</string>
	<string name="license">Metronome is free software: you can redistribute it and/or modify
		~ it under the terms of the GNU General Public License as published by
		~ the Free Software Foundation, either version 3 of the License, or
		~ (at your option) any later version.
		~
		~ Metronome is distributed in the hope that it will be useful,
		~ but WITHOUT ANY WARRANTY; without even the implied warranty of
		~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
		~ GNU General Public License for more details.
		~
		~ You should have received a copy of the GNU General Public License
		~ along with Metronome. If not, see &lt;http://www.gnu.org/licenses/>.
	</string>
	<string name="save_preset">Save Preset</string>
	<string name="ok">OK</string>
	<string name="delete">Delete</string>
	<string name="deleted">Deleted</string>
	<string name="no_saved_presets_toast">You haven\'t saved any presets!</string>
	<string name="nothing_delete">Nothing to delete!</string>
	<string name="values_set">Set sane values!</string>
	<string name="save_name">Save:</string>
	<string name="tap">TAP</string>
	<string name="stop_tap">Finish Taps</string>
	<string name="round_up">Up</string>
	<string name="round_down">Down</string>
	<string name="round_up_toast">Round up the BPM value.</string>
	<string name="round_down_toast">Round down the BPM value.</string>
	<string name="tone">Tone</string>
	<string name="tick">Tick</string>
	<string name="tock">Tock</string>
	<string name="about_note">Note that the taps are in subdivisions of 4/4!</string>
	<string name="reset">Reset to defaults</string>
	<string name="save_fail_toast">Didn\'t save!</string>
	<string name="save_success_toast">Saved Successfully!</string>
	<string name="restore_read_fail_toast">Failed to read, clear app data or try to save again!</string>
	<string name="autosave_name">AUTOSAVE</string>
	<string name="wave_type">Wave Type:</string>
	<string name="square">Square</string>
	<string name="sine">Sine</string>
	<string name="sawtooth">Sawtooth</string>
	<string name="PWM">PWM</string>
	<string name="cancel">Cancel</string>
	<string name="radioactive">https://radioactive.waelk.tech</string>
</resources>
