<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:background="@color/colorPrimaryDark"
	tools:context=".MetronomeActivity">

	<Button
		android:id="@+id/buttonStart"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignEnd="@+id/linearLayout3" android:layout_alignParentStart="true"
		android:layout_below="@+id/linearLayout3"
		android:backgroundTint="@color/colorPrimaryDarker"
		android:text="@string/start"/>
	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true" android:text="@string/bpm"
		android:textAppearance="?android:attr/textAppearanceLarge"/>
	<TextView
		android:id="@+id/textViewBPM"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/textView"
		android:layout_alignEnd="@+id/buttonStart" android:layout_alignParentTop="true"
		android:layout_toEndOf="@+id/textView" android:gravity="center"
		android:text="Large Text"
		android:textAppearance="?android:attr/textAppearanceLarge"/>
	<LinearLayout
		android:id="@+id/linearLayout"
		style="?android:attr/buttonBarStyle"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_alignParentStart="true" android:layout_below="@+id/textView"
		android:layout_toEndOf="@+id/textView"
		android:orientation="horizontal">

		<Button
			android:id="@+id/buttonPlusOne"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/plus_one"/>
		<Button
			android:id="@+id/buttonMinusOne"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/minus_one"/>
		<Button
			android:id="@+id/buttonPlusTen"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/plus_ten"/>
		<Button
			android:id="@+id/buttonMinusTen"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/minus_ten"/>
	</LinearLayout>
	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/linearLayout" android:text="@string/beats_number"
		android:textAppearance="?android:attr/textAppearanceLarge"/>
	<TextView
		android:id="@+id/textViewBeats"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/textView2"
		android:layout_alignParentEnd="true" android:layout_below="@+id/linearLayout"
		android:layout_toEndOf="@+id/textView2" android:gravity="center"
		android:text="Large Text"
		android:textAppearance="?android:attr/textAppearanceLarge"/>
	<LinearLayout
		android:id="@+id/linearLayout2"
		style="?android:attr/buttonBarStyle"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/textView2" android:orientation="horizontal">
		<Button
			android:id="@+id/buttonBeatPlusOne"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/plus_one"/>
		<Button
			android:id="@+id/buttonBeatMinusOne"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/minus_one"/>
	</LinearLayout>
	<ToggleButton
		android:id="@+id/toggleButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/linearLayout2"
		android:layout_centerHorizontal="true"
		android:checked="false"
		android:background="@drawable/screen_lock_toggle_button_colors"
		android:text="@string/keep_on" android:textOff="@string/keep_on"
		android:textOn="@string/keep_on"
	android:paddingLeft="20dp"
	android:paddingRight="20dp"/>


	<LinearLayout
		android:id="@+id/linearLayout3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/toggleButton"
		android:layout_marginTop="10dp"
		android:orientation="horizontal" android:weightSum="2">
		<Button
			android:id="@+id/buttonTap"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="@color/colorPrimaryLight"
			android:backgroundTint="@color/colorPrimaryDarker"
			android:text="@string/tap"/>
		<Button
			android:id="@+id/buttonStopTap"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="@color/colorPrimaryLight"
			android:backgroundTint="@color/colorPrimaryDarker"
			android:text="@string/stop_tap"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentStart="true" android:orientation="horizontal"
		android:weightSum="3" android:id="@+id/linearLayout4">
		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:id="@+id/button_delete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/delete"/>
		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:id="@+id/button_save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/save"/>
		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:id="@+id/button_restore"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/restore"/>
	</LinearLayout>
	<View style="@style/Divider" android:layout_above="@+id/linearLayout4"
		  android:layout_alignParentStart="true"/>

</RelativeLayout>
