<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016.
  ~ This file is part of Metronome.
  ~
  ~      Metronome is free software: you can redistribute it and/or modify
  ~      it under the terms of the GNU General Public License as published by
  ~      the Free Software Foundation, either version 3 of the License, or
  ~      (at your option) any later version.
  ~
  ~      Metronome is distributed in the hope that it will be useful,
  ~      but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~      GNU General Public License for more details.
  ~
  ~      You should have received a copy of the GNU General Public License
  ~      along with Metronome.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".MetronomeActivity">

	<Button
		android:id="@+id/buttonStart"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentStart="true"
		android:text="@string/start"/>
	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true" android:text="@string/bpm"
		android:textAppearance="?android:attr/textAppearanceLarge"/>
	<TextView
		android:id="@+id/textViewBPM"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/textView"
		android:layout_alignEnd="@+id/buttonStart" android:layout_alignParentTop="true"
		android:layout_toEndOf="@+id/textView" android:gravity="center"
		android:text="Large Text"
		android:textAppearance="?android:attr/textAppearanceLarge"/>
	<LinearLayout
		android:id="@+id/linearLayout"
		style="?android:attr/buttonBarStyle"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_alignParentStart="true" android:layout_below="@+id/textView"
		android:layout_toEndOf="@+id/textView"
		android:orientation="horizontal">

		<Button
			android:id="@+id/buttonPlusOne"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/plus_one"/>
		<Button
			android:id="@+id/buttonMinusOne"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/minus_one"/>
		<Button
			android:id="@+id/buttonPlusTen"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/plus_ten"/>
		<Button
			android:id="@+id/buttonMinusTen"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/minus_ten"/>
	</LinearLayout>
	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/linearLayout" android:text="@string/beats_number"
		android:textAppearance="?android:attr/textAppearanceLarge"/>
	<TextView
		android:id="@+id/textViewBeats"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/textView2"
		android:layout_alignParentEnd="true" android:layout_below="@+id/linearLayout"
		android:layout_toEndOf="@+id/textView2" android:gravity="center"
		android:text="Large Text"
		android:textAppearance="?android:attr/textAppearanceLarge"/>
	<LinearLayout
		android:id="@+id/linearLayout2"
		style="?android:attr/buttonBarStyle"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/textView2" android:orientation="horizontal">
		<Button
			android:id="@+id/buttonBeatPlusOne"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/plus_one"/>
		<Button
			android:id="@+id/buttonBeatMinusOne"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/minus_one"/>
	</LinearLayout>
	<ToggleButton
		android:id="@+id/toggleButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/linearLayout2"
		android:layout_centerHorizontal="true"
		android:checked="false"
		android:text="@string/keep_on" android:textOff="@string/keep_on"
		android:textOn="@string/keep_on"/>


	<FrameLayout
		android:id="@+id/fragment_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/buttonStart" android:layout_alignParentStart="true">

		<com.michaldrabik.tapbarmenulib.TapBarMenu
			android:id="@+id/tapBarMenu"
			android:layout_width="match_parent"
			android:layout_height="56dp"
			android:layout_gravity="center|bottom"
			android:layout_marginBottom="10dp"
			app:tbm_backgroundColor="@color/colorPrimary"
			app:tbm_buttonPosition="left"
			app:tbm_buttonSize="56dp"
			app:tbm_menuAnchor="top"
			app:tbm_showItems="false"
			>
			<LinearLayout android:layout_width="match_parent"
						  android:layout_height="match_parent"
						  android:paddingStart="20dp"
						  android:weightSum="3">
				<ImageView
					android:id="@+id/bar_image_delete"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:paddingBottom="10dp"
					android:paddingTop="10dp"
					android:src="@drawable/ic_action_delete"
					tools:visibility="visible"/>

				<ImageView
					android:id="@+id/bar_image_save"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:paddingBottom="10dp"
					android:paddingEnd="20dp"
					android:paddingStart="20dp"
					android:paddingTop="10dp"
					android:src="@drawable/ic_action_save"/>

				<ImageView
					android:id="@+id/bar_image_restore"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:paddingBottom="10dp"
					android:paddingEnd="20dp"
					android:paddingStart="20dp"
					android:paddingTop="10dp"
					android:src="@drawable/ic_action_restore"/>
			</LinearLayout>


		</com.michaldrabik.tapbarmenulib.TapBarMenu>

	</FrameLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:weightSum="2" android:layout_above="@+id/fragment_container"
		android:layout_below="@+id/toggleButton">
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tap"
			android:id="@+id/buttonTap"
			android:layout_weight="1"/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/stop_tap"
			android:id="@+id/buttonStopTap"
			android:layout_weight="1"/>
	</LinearLayout>
</RelativeLayout>
